Add ServerReboot alerts

--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -234,17 +234,17 @@
             </table>
           </div>
           <div class="span3">
-            <table class="table table-bordered table-condensed summary" id="None" data-label="None">
+            <table class="table table-bordered table-condensed summary" id="Reboot" data-label="Reboot">
               <thead>
-                <tr> <th colspan="6" id="None-status">-</th> </tr>
+                <tr> <th colspan="6" id="Reboot-status">Server Reboots</th> </tr>
               </thead>
               <tbody>
-                <tr id="None-warnings" class="warnings">
-                  <td id="None-critical">0</td>
-                  <td id="None-major">0</td>
-                  <td id="None-minor">0</td>
-                  <td id="None-warning">0</td>
-                  <td id="None-normal">0</td>
+                <tr id="Reboot-warnings" class="warnings">
+                  <td id="Reboot-critical">0</td>
+                  <td id="Reboot-major">0</td>
+                  <td id="Reboot-minor">0</td>
+                  <td id="Reboot-warning">0</td>
+                  <td id="Reboot-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -269,21 +269,23 @@
             </tbody>
             <tbody id="EC2-alerts" class="serviceAlerts initially-hidden">
             </tbody>
+            <tbody id="Puppet-alerts" class="serviceAlerts initially-hidden">
+            </tbody>
             <tbody id="OS-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Database-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Web-alerts" class="serviceAlerts initially-hidden">
             </tbody>
-            <tbody id="SLM-alerts" class="serviceAlerts initially-hidden">
-            </tbody>
             <tbody id="Ganglia-alerts" class="serviceAlerts initially-hidden">
-            </tbody>
-            <tbody id="Puppet-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Alerta-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Inactive-alerts" class="serviceAlerts initially-hidden">
+            </tbody>
+            <tbody id="SLM-alerts" class="serviceAlerts initially-hidden">
+            </tbody>
+            <tbody id="Reboot-alerts" class="serviceAlerts initially-hidden">
             </tbody>
           </table>
 
