--- a/htdocs/dev.html
+++ b/htdocs/dev.html
@@ -40,8 +40,15 @@
     </div>
 
     <div class="container">
-
       <div align="right">
+        <select id="from-date-select" class="btn" name="last" onchange="updateFromDate(this.value)">
+          <option value="0">All alerts</option>
+          <option value="120">Last 2 minutes</option>
+          <option value="300">Last 5 minutes</option>
+          <option value="600">Last 10 minutes</option>
+          <option value="1800">Last 30 minutes</option>
+          <option value="3600">Last 1 hour</option>
+        </select>
         <button class="btn" id="toggle-ACK" class="toggle-ACK"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Acknowledged</button>
         <button class="btn" id="toggle-NORMAL" class="toggle-NORMAL"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Normals</button>
         <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i> Refresh Now</button>
@@ -314,10 +321,10 @@
                          'EC2':             'environment='+env+'&service=EC2',
                          'Network':         'environment='+env+'&service=Network' };
 
-        loadAlerts(services, true);
+        loadAlerts(services, fromDate, true);
 
         $('#refresh-all').click(function() {
-          loadAlerts(services, false)
+          loadAlerts(services, fromDate, false)
         });
       });
     </script>
