--- a/htdocs/release.html
+++ b/htdocs/release.html
@@ -321,10 +321,10 @@
                          'EC2':             'environment='+env+'&service=EC2',
                          'Network':         'environment='+env+'&service=Network' };
 
-        loadAlerts(services, fromDate, true);
+        loadAlerts(services, true);
 
         $('#refresh-all').click(function() {
-          loadAlerts(services, fromDate, false)
+          loadAlerts(services, false)
         });
       });
     </script>
