--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -41,6 +41,16 @@
 
     <div class="container">
       <div align="right">
+        <table class="table table-bordered table-condensed span3" id="status-counts">
+          <tr id="Alert-status" class="status">
+            <td><span class="label">OPEN</span></td>
+            <td id="alert-open">0</td>
+            <td><span class="label">ACK</span></td>
+            <td id="alert-ack">0</td>
+            <td><span class="label">CLOSED</span></td>
+            <td id="alert-closed">0</td>
+          </tr>
+        </table>
         <select id="from-date-select" class="btn" name="last" onchange="updateFromDate(this.value)">
           <option value="0">All alerts</option>
           <option value="120">Last 2 minutes</option>
@@ -308,6 +318,7 @@
     <script>
       $(document).ready(function() {
 
+        var statusfilter = 'hide-alert-details=true';
         var services = { 'Servers':  'environment=INFRA&service=Servers',
                          'Network':  'environment=INFRA&service=Network',
                          'EC2':      'environment=INFRA&service=EC2',
@@ -322,9 +333,11 @@
                          'Reboot':   'event=ServerReboot',
                        };
 
+        loadStatus(statusfilter, true);
         loadAlerts(services, true);
 
         $('#refresh-all').click(function() {
+          loadStatus(statusfilter, false);
           loadAlerts(services, false)
         });
       });
