--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -40,8 +40,10 @@
     </div>
 
     <div class="container">
-      <div align="right">
-        <table class="table table-bordered table-condensed span3" id="status-counts">
+      <table width="100%">
+        <td>
+        <table class="table table-bordered table-condensed" id="status-counts">
+          <tbody>
           <tr id="Alert-status" class="status">
             <td><span class="label">OPEN</span></td>
             <td id="alert-open">0</td>
@@ -50,7 +52,10 @@
             <td><span class="label">CLOSED</span></td>
             <td id="alert-closed">0</td>
           </tr>
+          </tbody>
         </table>
+      </td><td>
+        <div align="right">
         <select id="from-date-select" class="btn" name="last" onchange="updateFromDate(this.value)">
           <option value="0">All alerts</option>
           <option value="120">Last 2 minutes</option>
@@ -62,16 +67,18 @@
         <button class="btn" id="toggle-ACK" class="toggle-ACK"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Acknowledged</button>
         <button class="btn" id="toggle-NORMAL" class="toggle-NORMAL"><span><i class="icon-minus"></i> Hide</span><span class="initially-hidden"><i class="icon-plus"></i> Show</span> Normals</button>
         <button id="refresh-all" class="console-button btn"><i class="icon-refresh"></i> Refresh Now</button>
-      </div>
+        </div>
+      </td>
+      </table>
 
       <div class="row show-grid">
         <div class="span12">
           <strong>Alert Summary</strong>
         <div class="row show-grid">
           <div class="span3">
-            <table class="table table-bordered table-condensed summary" id="Servers" data-label="Servers">
+            <table class="table table-bordered table-condensed summary" id="All Servers" data-label="Servers">
               <thead>
-                <tr> <th colspan="6" id="Servers-status">Servers</th> </tr> 
+                <tr> <th colspan="6" id="Servers-status">Infra Servers</th> </tr>
               </thead>
               <tbody>
                 <tr id="Servers-warnings" class="warnings">
@@ -135,17 +142,17 @@
         </div>
         <div class="row show-grid">
           <div class="span3">
-            <table class="table table-bordered table-condensed summary" id="OS" data-label="OS">
+            <table class="table table-bordered table-condensed summary" id="Linux" data-label="Linux">
               <thead>
-                <tr> <th colspan="6" id="OS-status">OS</th> </tr> 
+                <tr> <th colspan="6" id="Linux-status">Linux Servers</th> </tr>
               </thead>
               <tbody>
-                <tr id="OS-warnings" class="warnings">
-                  <td id="OS-critical">0</td>
-                  <td id="OS-major">0</td>
-                  <td id="OS-minor">0</td>
-                  <td id="OS-warning">0</td>
-                  <td id="OS-normal">0</td>
+                <tr id="Linux-warnings" class="warnings">
+                  <td id="Linux-critical">0</td>
+                  <td id="Linux-major">0</td>
+                  <td id="Linux-minor">0</td>
+                  <td id="Linux-warning">0</td>
+                  <td id="Linux-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -201,17 +208,17 @@
         </div>
         <div class="row show-grid">
           <div class="span3">
-            <table class="table table-bordered table-condensed summary" id="Alerta" data-label="Alerta">
+            <table class="table table-bordered table-condensed summary" id="Solaris" data-label="Solaris">
               <thead>
-                <tr> <th colspan="6" id="Alerta-status">Alerta</th> </tr>
+                <tr> <th colspan="6" id="Solaris-status">Solaris Servers</th> </tr>
               </thead>
               <tbody>
-                <tr id="Alerta-warnings" class="warnings">
-                  <td id="Alerta-critical">0</td>
-                  <td id="Alerta-major">0</td>
-                  <td id="Alerta-minor">0</td>
-                  <td id="Alerta-warning">0</td>
-                  <td id="Alerta-normal">0</td>
+                <tr id="Solaris-warnings" class="warnings">
+                  <td id="Solaris-critical">0</td>
+                  <td id="Solaris-major">0</td>
+                  <td id="Solaris-minor">0</td>
+                  <td id="Solaris-warning">0</td>
+                  <td id="Solaris-normal">0</td>
                 </tr>
               </tbody>
             </table>
@@ -280,21 +287,21 @@
             </thead>
             <tbody id="Servers-alerts" class="serviceAlerts initially-hidden">
             </tbody>
+            <tbody id="Linux-alerts" class="serviceAlerts initially-hidden">
+            </tbody>
+            <tbody id="Solaris-alerts" class="serviceAlerts initially-hidden">
+            </tbody>
             <tbody id="Network-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="EC2-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Puppet-alerts" class="serviceAlerts initially-hidden">
             </tbody>
-            <tbody id="OS-alerts" class="serviceAlerts initially-hidden">
-            </tbody>
             <tbody id="Database-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Web-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Ganglia-alerts" class="serviceAlerts initially-hidden">
-            </tbody>
-            <tbody id="Alerta-alerts" class="serviceAlerts initially-hidden">
             </tbody>
             <tbody id="Acknowledged-alerts" class="serviceAlerts initially-hidden">
             </tbody>
@@ -320,14 +327,14 @@
 
         var statusfilter = 'hide-alert-details=true';
         var services = { 'Servers':  'environment=INFRA&service=Servers',
+                         'Linux':    'tags=os:linux',
+                         'Solaris':  'tags=os:sunos',
                          'Network':  'environment=INFRA&service=Network',
                          'EC2':      'environment=INFRA&service=EC2',
                          'Puppet':   'group=Puppet',
-                         'OS':       'group=OS',
                          'Database': 'group=Database',
                          'Web':      'group=Web',
                          'Ganglia':  'group=Ganglia',
-                         'Alerta':   'group=Alerta',
                          'Acknowledged': 'status=ACK',
                          'SLM':      'group=SLM',
                          'Reboot':   'event=ServerReboot',
