Minor bug fix for infra console

--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -76,7 +76,7 @@
           <strong>Alert Summary</strong>
         <div class="row show-grid">
           <div class="span3">
-            <table class="table table-bordered table-condensed summary" id="All Servers" data-label="Servers">
+            <table class="table table-bordered table-condensed summary" id="Servers" data-label="Servers">
               <thead>
                 <tr> <th colspan="6" id="Servers-status">Infra Servers</th> </tr>
               </thead>
