Add component heartbeats

--- a/htdocs/infra.html
+++ b/htdocs/infra.html
@@ -33,6 +33,7 @@
               <li class="active"><a href="./infra.html">Infrastructure</a></li>
               <li class=""><a href="./treemap.html">Treemap</a></li>
               <li class=""><a href="/Kibana">History</a></li>
+              <li class=""><a href="./about.html">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
