--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -1,15 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Alert Treemap</title>
-
-    <link href="css/treemap.css" rel="stylesheet">
+    <title>Alert Console</title>
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <script src="js/d3.v2.js"></script>
   </head>
 
   <body>
@@ -33,39 +31,43 @@
               <li class=""><a href="./stage.html">Stage</a></li>
               <li class=""><a href="./lwp.html">LWP</a></li>
               <li class=""><a href="./infra.html">Infrastructure</a></li>
-              <li class="active"><a href="./treemap.html">Treemap</a></li>
+              <li class=""><a href="./treemap.html">Treemap</a></li>
               <li class=""><a href="/Kibana">History</a></li>
-              <li class=""><a href="./about.html">About</a></li>
+              <li class="active"><a href="./about.html">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
 
-     <div class="container">
-     <div align="right">
-      <button class="btn" id="size" class="first active">
-        All Alerts
-      </button
-      ><button class="btn" id="count" class="last">
-        Non-normal Alerts
-      </button>
-
-      </div>
-
+    <div class="container">
       <div class="row show-grid">
         <div class="span12">
+        <strong>Registered Components</strong>
+        <table class="table table-bordered table-condensed" id="Heartbeats">
+          <thead>
+            <tr><th>Origin</th><th>Version</th><th>Heartbeat Sent</th><th>Time Since Received</th></tr>
+          </thead>
+          <tbody id="Heartbeat-info">
+            <tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>
+          </tbody>
+        </table>
 
-
-    <div id="chart">
-    </div>
-       </div>
-      </div>
-      <!-- end Alert Details -->
-
+        </div> <!-- end span12 -->
+      </div> <!-- end row -->
     </div> <!-- end container -->
-    <script src="js/treemap.js"></script>
+
+    <script src="js/jquery-1.7.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/about.js"></script>
+
+    <script>
+      $(document).ready(function() {
+
+        getHeartbeats(true);
+      });
+    </script>
 
   </body>
 </html>
-
