Add heartbeat alerts to infra console

--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -48,7 +48,7 @@
           <thead>
             <tr><th>Origin</th><th>Version</th><th>Heartbeat Sent</th><th>Time Since Received</th></tr>
           </thead>
-          <tbody id="Heartbeat-info">
+          <tbody id="heartbeat-info">
             <tr><td>...</td><td>...</td><td>...</td><td>...</td></tr>
           </tbody>
         </table>
@@ -60,7 +60,7 @@
     <script src="js/jquery-1.7.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/about.js"></script>
+    <script src="js/console.js"></script>
 
     <script>
       $(document).ready(function() {
