Add heartbeat alerts to all consoles

--- a/htdocs/code.html
+++ b/htdocs/code.html
@@ -41,6 +41,7 @@
     </div>
 
     <div class="container">
+      <span id="heartbeat-alerts"></span>
       <div id="console-alert" class="alert alert-info initially-hidden">
         <button class="close" data-dismiss="alert" onclick="">&times;</button>
         <strong>Warning!</strong> <span id="warning-text"></span>
@@ -335,6 +336,8 @@
 
     <script>
       $(document).ready(function() {
+
+        heartbeatAlerts();
 
         var env = "CODE";
         var statusfilter = 'environment='+env+'&status=OPEN|ACK|CLOSED';
