--- a/htdocs/test.html
+++ b/htdocs/test.html
@@ -296,7 +296,7 @@
               Test - <span id="alert-details-caption">R2</span> alert details
             </caption>
             <thead>
-              <tr> <th></th><th>Severity</th><th>Status</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Env.</th><th>Service</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr>
+              <tr> <th></th><th>Severity</th><th>Status</th><th>Last Receive Time</th><th>Dupl. Count</th><th>Env.</th><th>Service</th><th>Cluster</th><th>Resource</th><th>Event</th><th>Value</th><th>Text</th></tr>
             </thead>
             <tbody id="R2-alerts" class="serviceAlerts">
             </tbody>
