--- a/dashboard/v2/console.html
+++ b/dashboard/v2/console.html
@@ -1,16 +1,49 @@
 <html>
 <head>
 
+
     <script type="text/javascript" language="javascript" src="js/DataTables/media/js/jquery.js"></script>
     <script type="text/javascript" language="javascript" src="js/DataTables/media/js/jquery.dataTables.min.js"></script>
 
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="alerts">
+<div class="container">
+
+<div class="row show-grid">
+<div class="span12">
+<strong>Alert Summary</strong>
+<div class="row show-grid">
+<div class="span3">
+    <table class="table table-bordered table-condensed summary" id="R2R1" data-label="R2R1">
+        <thead>
+        <tr> <th colspan="6" id="R2R1-status">R2 &amp; R1</th> </tr>
+        </thead>
+        <tbody>
+        <tr id="R2R1-warnings" class="warnings">
+            <td id="R2R1-critical">0</td>
+            <td id="R2R1-major">0</td>
+            <td id="R2R1-minor">0</td>
+            <td id="R2R1-warning">0</td>
+            <td id="R2R1-normal">0</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</div>
+</div>
+</div>
+
+    <!-- Alert Details -->
+    <div class="row show-grid">
+        <div class="span12">
+
+<table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered table-condensed" id="alerts">
     <thead>
     <tr>
         <th>Severity</th>
@@ -46,16 +79,72 @@
     </tfoot>
 </table>
 
+</div>
+</div>
+    <!-- end Alert Details -->
+
+</div> <!-- end container -->
+
 <script>
 
     var oTable;
     function fnFormatDetails ( aData )
     {
-        //var aData = oTable.fnGetData( nTr );
+        var severity = aData[0];
+        var status = aData[1];
+        var lastReceiveTime = aData[2];
+        var duplicateCount = aData[3];
+        var environment = aData[4];
+        var service = aData[5];
+            // TODO(nsatterl): cluster
+        var resource = aData[6];
+        var event = aData[7];
+        var value = aData[8];
+        var text = aData[9];
+        var severityCode = aData[10];
+        var alertid = aData[11];
+        var lastReceiveId = aData[12];
+        var createTime = aData[13];
+        var receiveTime = aData[14];
+        var group = aData[15];
+        var previousSeverity = aData[16];
+        var trendIndication = aData[17];
+        var thresholdInfo = aData[18];
+        var timeout = aData[19];
+        var type = aData[20];
+        var repeat = aData[21];
+        var summary = aData[22];
+        var origin = aData[23];
+        var tags = aData[24];
+        var moreInfo = aData[25];
+
         var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
-        sOut += '<tr><td>Rendering engine:</td><td>'+aData[2]+' '+aData[5]+'</td></tr>';
-        sOut += '<tr><td>Link to source:</td><td>Could provide a link here</td></tr>';
-        sOut += '<tr><td>Extra info:</td><td>And any further details here (images etc)</td></tr>';
+        sOut += '<tr class="odd"><td>Alert ID:</td><td>'+ alertid +'</td></tr>';
+        sOut += '<tr class="even"><td>Last Receive Alert ID:</td><td>' + lastReceiveId + '</td></tr>';
+        sOut += '<tr class="odd"><td>Create Time:</td><td>' + createTime + '</td></tr>';
+        sOut += '<tr class="even"><td>Receive Time:</td><td>' + receiveTime + '</td></tr>';
+        sOut += '<tr class="odd"><td>Last Receive Time:</td><td>' + lastReceiveTime + '</td></tr>';
+
+        sOut += '<tr class="even"><td>Environment:</td><td>' + environment + '</td></tr>';
+        sOut += '<tr class="odd"><td>Service:</td><td>' + service + '</td></tr>';
+        sOut += '<tr class="even"><td>Resource:</td><td>' + resource + '</td></tr>';
+        sOut += '<tr class="odd"><td>Event:</td><td>' + event + '</td></tr>';
+        sOut += '<tr class="even"><td>Group:</td><td>' + group + '</td></tr>';
+        sOut += '<tr class="odd"><td>Severity:</td><td>' + previousSeverity + ' -> ' + severity + '</td></tr>';
+        sOut += '<tr class="even"><td>Status:</td><td>' + status + '</td></tr>';
+        sOut += '<tr class="odd"><td>Value:</td><td>' + value + '</td></tr>';
+        sOut += '<tr class="even"><td>Text:</td><td>' + text + '</td></tr>';
+
+        sOut += '<tr class="odd"><td>Trend Indication:</td><td>' + trendIndication + '</td></tr>';
+        sOut += '<tr class="even"><td>Threshold Info:</td><td>' + thresholdInfo + '</td></tr>';
+        sOut += '<tr class="odd"><td>Timeout:</td><td>' + timeout + '</td></tr>';
+        sOut += '<tr class="even"><td>Type:</td><td>' + type + '</td></tr>';
+        sOut += '<tr class="odd"><td>Repeat:</td><td>' + repeat + '</td></tr>';
+        sOut += '<tr class="even"><td>Summary:</td><td>' + summary + '</td></tr>';
+        sOut += '<tr class="odd"><td>Origin:</td><td>' + origin + '</td></tr>';
+        sOut += '<tr class="even"><td>Tags:</td><td>' + tags + '</td></tr>';
+        // TODO(nsatterl): Graphs
+        sOut += '<tr class="odd"><td>More Info:</td><td>' + moreInfo + '</td></tr>';
         sOut += '</table>';
 
         return sOut;
@@ -131,7 +220,8 @@
                 { "sWidth": "40%" },
                 { "bVisible": false }
             ],
-            "aaSorting": [[2, 'desc']]
+            "aaSorting": [[2, 'desc']],
+            "sDom": "<'row'<'span6'l><'span6'f>r>t<'row'<'span6'i><'span6'p>>"
         });
 
         $('#alerts tbody tr').live( 'click', function () {
@@ -167,38 +257,32 @@
 
                     $.each(data.response.alerts.alertDetails, function(i, ad) {
 
+                        ad.severity = ad.severity.charAt(0).toUpperCase() + ad.severity.slice(1);
+
                                 var severityCode;
                                 switch (ad.severity) {
                                     case 'Critical':
-                                    case 'critical':
                                         severityCode = 1;
                                         break;
                                     case 'Major':
-                                    case 'major':
                                         severityCode = 2;
                                         break;
                                     case 'Minor':
-                                    case 'minor':
                                         severityCode = 3;
                                         break;
                                     case 'Warning':
-                                    case 'warning':
                                         severityCode = 4;
                                         break;
                                     case 'Normal':
-                                    case 'normal':
                                         severityCode = 5;
                                         break;
                                     case 'Informational':
-                                    case 'inform':
                                         severityCode = 6;
                                         break;
                                     case 'Debug':
-                                    case 'debug':
                                         severityCode = 7;
                                         break;
                                     case 'Auth':
-                                    case 'auth':
                                         severityCode = 8;
                                         break;
                                     default:
@@ -206,24 +290,43 @@
                                 }
 
                         $('#alerts').dataTable().fnAddData([
-                            ad.severity,
+                            ad.severity,       // 0
                             ad.status,
                             ad.lastReceiveTime,
                             ad.duplicateCount,
                             ad.environment,
                             ad.service,
+                                // TODO(nsatterl): cluster
                             ad.resource,
                             ad.event,
                             ad.value,
-                            ad.text,
-                            severityCode
+                            ad.text,  // 9
+
+                            severityCode, // to enable sorting on severity
+
+                            ad.id, // 11
+                            ad.lastReceiveId,
+                            ad.createTime,
+                            ad.receiveTime,
+                            ad.group,
+                            ad.previousSeverity,
+                            ad.trendIndication,
+                            ad.thresholdInfo,
+                            ad.timeout,
+                            ad.type,
+                            ad.repeat,
+                            ad.summary,
+                            ad.origin,
+                            ad.tags,
+                            ad.moreInfo
+
                         ]);
 
                     });
                 },
                 complete: function() {
                     oTable.fnDraw(false);
-                    setTimeout(worker, 5000);
+                    setTimeout(worker, 60000);
                 }
             });
         })();
